@@ -463,6 +463,12 @@ the user's environment from the cache file.
 The default value is 2 seconds.
 
 .TP
+\fBGresPlugins\fR
+A comma delimited list of generic resource management plugins to be used.
+The specified plugins will be executed in the order listed.
+No plugins are used by default.
+
+.TP
 \fBGroupUpdateForce\fR
 If set to a non\-zero value, then information about which users are members
 of groups allowed to use a partition will be updated periodically, even when
